# jenkins-python-cicd-demo

./: .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  pyproject.toml  requirements.txt
jenkins_build/: Dockerfile  docker-compose.yml
